# trip-planner

./: manage.py  pyproject.toml  requirements.txt  run.py  vercel.json
apps/core/: admin.py  authentication.py  models.py  serializers.py  urls.py  views.py
apps/core/management/commands/: create_test_eld_data.py
apps/core/migrations/: 0001_initial.py  0002_add_eld_compliance_fields.py  0003_dailydocumentsummary_dutystatusentry_and_more.py
apps/eld/: admin.py  models.py  serializers.py  services.py  urls.py  views.py
apps/eld/migrations/: 0001_initial.py
apps/routes/: admin.py  models.py  serializers.py  urls.py  views.py
apps/routes/migrations/: 0001_initial.py
apps/trips/: admin.py  models.py  serializers.py  services.py  tasks.py  urls.py  views.py
apps/trips/migrations/: 0001_initial.py
config/: __init__.py  asgi.py  celery.py  urls.py  wsgi.py
config/settings/: base.py  development.py  production.py
docs/: system_overview.md
mapping/: services.py  utils.py
static/admin/css/: eld_admin.css
